# xkrt

./: .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  architecture.html  building.html  classes.html  consts_8h.html  consts_8h.js  consts_8h_source.html  distribution_8h_source.html  driver_8h_source.html  examples.html  flag_8h.html  flag_8h.js  flag_8h_source.html  format_8h.html  format_8h.js  format_8h_source.html  functions.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_l.html  functions_m.html  functions_n.html  functions_p.html  functions_s.html  functions_t.html  functions_u.html  functions_vars.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  globals_t.html  globals_type.html  (+34 more)
.github/workflows/: docs.yml
api/c/include/xkrt/: xkrt.h
api/c/src/: xkrt.cc
cmake/: FindZE.cmake  XKRTConfig.cmake.in
docs/: Doxyfile  architecture.md  building.md  examples.md
examples/heat-diffusion-2d/src/: main.cc
examples/io/: cuda.cc  native.cu  xkrt.cc
include/xkrt/: callback.h  consts.h  internals.h  runtime.h  support.h.in  types.h
include/xkrt/command/: command.hpp
include/xkrt/conf/: conf.h
include/xkrt/data-structures/: README.md  bitset2d.h  memory-pool.h  small-vector.h
include/xkrt/distribution/: distribution.h
include/xkrt/driver/: device.hpp  driver-cl.h  driver-cu.h  driver-hip.h  driver-host.h  driver-sycl.h  driver-ze.h  driver.h  kernel-launcher.h  queue-command-list-counter.h  queue-type.h  queue.h
include/xkrt/logger/: logger.h
include/xkrt/memory/: allocator-type.h  area.h  size.h  view.hpp
include/xkrt/memory/access/: access.hpp  coherency-controller.hpp  dependency-domain.hpp  dummy-coherency-controller.hpp
include/xkrt/memory/access/blas/: dependency-tree.hpp  memory-tree.hpp
include/xkrt/memory/access/common/: hyperrect.hpp  interval.hpp  lp-tree.hpp
include/xkrt/memory/access/handle/: dependency-map.hpp
include/xkrt/memory/access/interval/: dependency-tree.hpp
include/xkrt/memory/allocator/: allocator.hpp  buddy.hpp  freelist.hpp
include/xkrt/memory/routing/: router-affinity.hpp  router-cfs.hpp  router-random.hpp  router.hpp
include/xkrt/stats/: stats.h
include/xkrt/sync/: atomic.h  bits.h  lockable.hpp  mem.h  mutex.h  spinlock.h
include/xkrt/task/: flag.h  format.h  formats.hpp  task.hpp
include/xkrt/thread/: deque.hpp  naive-deque.hpp  reentrant_spinlock.h  team.h  thread.h
opencg/: CMakeLists.txt  README.md  modulefile
opencg/cmake/: FindOpenCG.cmake  OpenCGConfig.cmake.in
opencg/include/opencg/: bitset2d.hpp  command-graph-pass.hpp  command-graph.hpp  command-type.hpp  command.hpp  device-type.hpp  min-max.h  namespace.hpp  opencg.hpp
opencg/include/opencg/c/: api.h
opencg/src/: command-graph.cc  command-type.cc
opencg/src/passes/: batch.cc  copy-fuse.cc  copy-normalize.cc  prog-fuse.cc  reduce-edge.cc  reduce-node.cc
opencg/tests/: CMakeLists.txt  h2d-distribute.cc  opencg-tests.cc
scripts/: README.md  install.sh  update.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  defines_1.js  enumvalues_3.js  functions_5.js  functions_9.js  functions_a.js  searchdata.js  typedefs_0.js  typedefs_3.js  typedefs_6.js  variables_0.js  variables_10.js  variables_2.js  variables_3.js  (+8 more)
src/: access.cc  driver.cc  memory.cc  power.cc  runtime.cc  sched.cc  task.cc  xkrt_info.cc
src/command/: command-graph.cc
src/conf/: conf.cc
src/distribution/: distribution.cc
src/driver/: device.cc  driver.cc  driver_cl.cc  driver_cu.cc  driver_hip.cc  driver_host.cc  driver_sycl.cc  driver_ze.cc  queue.cc
src/file/: readwrite.cc
src/memory/: access.cc  coherent.cc  copy.cc  distribute.cc  invalidate.cc  register.cc
src/memory/access/handle/: dependency-map.cc
src/memory/access/interval/: dependency-tree.cc
src/memory/allocator/: buddy.cc  freelist.cc
src/stats/: stats.cc
src/task/: format.cc  task-dependency-graph.cc  task.cc
src/thread/: deque.cc  thread.cc
tests/: CMakeLists.txt  fib-task-capture.cc  fib-task-format.cc  memory-allocator.cc  memory-register-async-legacy-memcpy-split.cc  moldability.cc  task-dependency-graph.cc  task-dependency-handle.cc  task-dependency-interval-matrix.cc  task-dependency-interval.cc  task-dependency.cc  task-format-host.cc  task-gpu-empty.cc
tests/api/c/: CMakeLists.txt  memory-register.c  task-spawn.c  team-task-spawn.c
tests/common/: skip.h
tests/file/: CMakeLists.txt  file-read.cc  file-write.cc
tests/khp-tree/: CMakeLists.txt  interactive-2D.cc  interactive-4D.cc  noop-lp-tree.hpp  random.cc
tests/lifecycle/: CMakeLists.txt
tests/memory/: CMakeLists.txt  memory-allocator-host-unified.cc  memory-copy-async.cc  memory-register-assisted-async-depend.cc  memory-register-assisted-async.cc  memory-register-assisted-unregister.cc  memory-register-assisted.cc  memory-register-async.conf.cc  memory-register-protection.cc
tests/task/: CMakeLists.txt  fib-task-format.cc  task-concurrency.cc  task-dependency-graph-host.cc  task-dependency-graph.cc  task-dependency-handle.cc  task-dependency-interval-matrix.cc  task-detachable.cc  task-format-incremental.cc  task-gpu-empty.cc  task-moldable-split.cc  task-spawn-dependencies.cc  taskgroup.cc  undeferred.cc
tests/team/: CMakeLists.txt  team-critical.cc  team-parallel-for-bounds.cc
utils/: task-constexpr-generator.py
